Fix: Text alignment in the `PopupWindow` component

--- a/src/styles/PopupWindow.css
+++ b/src/styles/PopupWindow.css
@@ -98,10 +98,10 @@
 
 .popup-window__main-content {
     font-size: 1.2rem;
-    width: 100%;
     display: flex;
-    justify-content: center;
     margin-bottom: auto;
+    margin-left: 6rem;
+    margin-right: 6rem;
     
 }
 
